--- a/graph_processing/Dockerfile
+++ b/graph_processing/Dockerfile
@@ -1,12 +1,15 @@
+# Use the official Ubuntu 24.04 image as the base image
 FROM ubuntu:24.04
 
+# Set environment variables to disable interactive prompts and to optimize Python behavior
 ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+# Set the working directory inside the container
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies required for the application
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3.12 \
     python3.12-venv \
@@ -23,14 +26,14 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Make python3.12 the default python
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.12 1
 
-# Install Python packages
+# Install Python packages from the requirements file
 COPY requirements.txt .
 RUN python -m pip install --no-cache-dir --break-system-packages -r requirements.txt
 
-# Copy the entire project
+# Copy the entire project to the container
 COPY . .
 
-# Build nauty
+# Build and install the nauty tool
 RUN cd nauty2_8_9 && \
     ./configure && \
     make && \
@@ -38,8 +41,8 @@ RUN cd nauty2_8_9 && \
     cd .. && \
     rm -rf nauty2_8_9
 
-# Expose Flask default port
+# Expose port 5000 for Flask web server
 EXPOSE 5000
 
-# Start the web server
+# Command to run the Flask web server
 CMD ["python", "web_server.py"]
